--- a/style.css
+++ b/style.css
@@ -1,6 +1,33 @@
+:root {
+  --primary-color: #adf0d4;
+  --secondary-color: #1fd8a4;
+  --bg-color: #0d1512;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'inter', sans-serif;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+  min-width: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+
+.darkerText {
+  color: var(--secondary-color);
+}
+
+header, 
+main, 
+footer {
+  max-width: 700;
+  margin: 0 auto;
+  width: 100%;
 }
