--- a/style.css
+++ b/style.css
@@ -31,3 +31,9 @@ footer {
   margin: 0 auto;
   width: 100%;
 }
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
