--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'inter', sans-serif;
+  transition-duration: 200ms;
 }
 
 body {
@@ -18,6 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 72px;
+  padding: 14px;
 }
 
 .darkerText {
@@ -36,4 +38,16 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 14px;
+}
+
+nav {
+  color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+
+nav a:hover {
+  opacity: 0.7;
 }
