--- a/style.css
+++ b/style.css
@@ -86,3 +86,21 @@ section {
   aspect-ratio: 1/1;
   object-fit: cover;
 }
+
+.Stats{
+ display: flex;
+ align-items: stretch;
+ gap: 24px;
+}
+
+.Childstats{
+  display: flex;
+  flex-direction: column;
+}
+
+.Childstats div {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 9px;
+}
