--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ footer {
   width: 100%;
 }
 
+p {
+  font-size: 1.05em;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -98,9 +102,19 @@ section {
   flex-direction: column;
 }
 
-.Childstats div {
+.Childstats>div {
   flex: 1;
   display: flex;
   align-items: center;
   gap: 9px;
+}
+
+.Childstats div i {
+  font-size: 1.4em;
+}
+
+.Childstats div div {
+  display: grid;
+  place-items: center;
+  min-width: 40px;
 }
