--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ section {
 
 .Stats{
  display: flex;
+ flex-direction: column;
  align-items: stretch;
  gap: 24px;
 }
@@ -100,6 +101,7 @@ section {
 .Childstats{
   display: flex;
   flex-direction: column;
+  gap: 14px
 }
 
 .Childstats>div {
@@ -120,5 +122,5 @@ section {
 }
 
 .Me {
-  list-height: 1.5em;
+  line-height: 1.5em;
 }
