--- a/style.css
+++ b/style.css
@@ -122,16 +122,25 @@ section {
 
 .Me {
   line-height: 1.5em;
+
 }
 
-.Reach{
+.Reach {
   display: flex;
   align-items: center;
   gap: 14px;
+  cursor: pointer;
+  width: fit-content;
+  margin-right: auto;
+
 }
 
 .Reach i {
   transform: rotate(-45deg);
+}
+
+.Reach:hover {
+  opacity: 0.7;
 }
 
 @media (min-width: 640px) {
