--- a/style.css
+++ b/style.css
@@ -143,6 +143,32 @@ section {
   opacity: 0.7;
 }
 
+.Mainproject {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.Eachproject {
+   display: flex;
+   align-items: stretch;
+   gap: 24px;
+}
+
+.Eachproject div:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.Eachproject div:last-child {
+  aspect-ratio: 16/9;
+}
+
+.headerText{
+  margin-bottom: 24px;
+}
+
 @media (min-width: 640px) {
   .Stats {
     flex-direction: row;
