--- a/style.css
+++ b/style.css
@@ -163,6 +163,15 @@ section {
 
 .Eachproject div:last-child {
   aspect-ratio: 16/9;
+  max-width: 30%;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.Eachproject div:last-child img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .headerText{
