--- a/style.css
+++ b/style.css
@@ -162,14 +162,14 @@ section {
   gap: 14px;
 }
 
-.Eachproject div:last-child {
+.Eachproject>div:last-child {
   aspect-ratio: 16/9;
   max-width: 30%;
   overflow: hidden;
   border-radius: 8px;
 }
 
-.Eachproject div:last-child img {
+.Eachproject>div:last-child img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -177,6 +177,25 @@ section {
 
 .headerText{
   margin-bottom: 24px;
+}
+
+.linkcontainer {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+
+.Linkitem {
+ display: flex;
+ flex-direction: row !important;
+ align-items: center;
+ gap: 8px !important;
+ color: var(--primary-color) 
+}
+
+.linkItem p {
+  font-size: 0.9em;
 }
 
 @media (min-width: 640px) {
